summative.moria.Moria.scala.error
Compilation error:
Moria:18: error: ')' expected but 'if' found.
  if (!estFaceMur || porteBiscuit()){
  ^